--- a/action.yml
+++ b/action.yml
@@ -132,9 +132,13 @@ inputs:
     required: false
   auth_verification_url:
     description: 'URL used to verify authentication success. If authentication fails when this URL is provided, the scan will be terminated.'
+    required: false
   verbose: 
    description: 'Enable verbose logging.'
    required: false
+  other_options:
+    description: 'Other command line arguments sent directly to the script for items not supported by other command line arguments'
+    required: false
 runs:
   using: 'docker'
   image: 'Dockerfile'
@@ -169,6 +173,7 @@ runs:
     SOOS_OAUTH_TOKEN_URL: ${{ inputs.oauth_token_url }}
     SOOS_ON_FAILURE: ${{ inputs.on_failure }}
     SOOS_OPERATING_ENVIRONMENT: ${{ inputs.operating_environment }}
+    SOOS_OTHER_OPTIONS: ${{ inputs.other_options }}
     SOOS_OUTPUT_FORMAT: ${{ inputs.output_format }}
     SOOS_PROJECT_NAME: ${{ inputs.project_name }}
     SOOS_REQUEST_COOKIES: ${{ inputs.request_cookies }}
