--- a/action.yml
+++ b/action.yml
@@ -5,10 +5,6 @@ branding:
   icon: 'alert-triangle'
   color: 'blue'
 inputs:
-  image_tag:
-    description: 'The soosio/dast-github image tag to use; defaults to latest'
-    required: true
-    default: 'latest'
   client_id:
     description: 'SOOS Client Id.'
     required: true
@@ -141,7 +137,7 @@ inputs:
     required: false
 runs:
   using: 'docker'
-  image: docker://soosio/dast-github:alpha
+  image: docker://soosio/dast-github:latest
   env:
     SOOS_AJAX_SPIDER: ${{ inputs.ajax_spider }}
     SOOS_API_KEY: ${{ inputs.api_key }}
