--- a/action.yml
+++ b/action.yml
@@ -144,7 +144,7 @@ runs:
   steps:
     - name: Check version
       shell: bash
-      run: ./check_version.sh
+      run: /check_version.sh
     - name: Run beta
       if: ${{ inputs.image_tag }} == 'beta'
       uses: docker://soosio/dast-github:beta
